fix text overflow in title

--- a/src/components/book/bookCard.module.scss
+++ b/src/components/book/bookCard.module.scss
@@ -29,6 +29,11 @@
         font-weight: 700;
         font-size: 20px;
         line-height: 30px;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .author {
